# se-toolkit-lab-8

./: .env.docker  .env.docker.secret  REPORT.md  docker-compose.yml  pyproject.toml
nanobot/: config.json  config_bare.json  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
